CAL-344 Codebase Reformat (#383)
* CAL-344 Add formatter plugin and updated README

* CAL-344 Apply codebase reformat